<resources>
    <string name="app_name">Cook It</string>
    <string name="recipeButton">Recipe List</string>
    <string name="shoppingBag">Shopping List</string>
    <string name="ImageViewDescription">App logo, a burger with eyes</string>
    <string name="titleBelowLogo">All your recipes in one place</string>
    <string name="header">Cook It</string>
    <string name="welcomeBackTxt">Welcome back!</string>
    <string name="addButtonDescription">Small plus icon to add recipes.</string>
    <string name="AddSymbolDescription">Plus sign in the bottom center of the screen to add new recipes.</string>
    <string name="shoppinglist">Shopping List</string>
    <string name="recipelist">Recipe List</string>
    <string name="BannerTextRecipeList">Your Recipe List</string>
    <string name="TestRecipeName">Test Recipe</string>
    <string name="recipeDescription">Button to open a recipe</string>
    <string name="BannerTxtShopping">Your Shopping List</string>
    <string name="NeedToBuy">You still need to buy these!</string>
    <string name="RecipeTxt">Here are your recipes at a glance!</string>
    <string name="favoritesSwitch">Show Favorites</string>
    <string name="recipeDetails">%1$s servings | Duration: %2$s</string>
    <string name="DeleteSymbolDescription">Trash can icon at the top of the screen to empty the entire shopping list.</string>
    <string name="deleteShoppingList">Empty Shopping List</string>
    <string name="deleteShoppingListYouSure">Are you sure you want to empty your shopping list?</string>
    <string name="deleteConfirmation">Delete All Ingredients</string>
    <string name="deleteCheckedConfirmation">Delete Checked Ingredients</string>
    <string name="deletedChecked">Checked ingredients removed</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="stepDescription">Step Description</string>
    <string name="step">Preparation Step</string>
    <string name="NavBarAddText">Create Recipe</string>
    <string name="shoppingBagHelperText">Your shopping list is empty!</string>
    <string name="stepsTitle">Preparation Steps</string>
    <string name="recipeEditTitle">Edit Recipe</string>
    <string name="recipeEditSave">Save Recipe</string>
    <string name="steps">Preparation</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="addStep">Add Step</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="people">People</string>
    <string name="portionsColon">Servings: </string>
    <string name="minutes">min.</string>
    <string name="durationColon">Duration:</string>
    <string name="fieldForTitle">Field for Title</string>
    <string name="createNewRecipe">Create New Recipe</string>
    <string name="backButtonDescription">Back Button</string>
    <string name="recipeImageDescription">Recipe Image Placeholder</string>
    <string name="titleColon">Title:</string>
    <string name="titleHint">Title</string>
    <string name="permissionDenied">Access denied. Image not selectable.</string>
    <string name="durationHint">Duration</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipeDeleted">Recipe deleted</string>
    <string name="hoursAndMinutes">%d hr %d min</string>
    <string name="hours">%d hr</string>
    <string name="min">%d min</string>
    <string name="onePortion">One Portion</string>
    <string name="portions">Servings</string>
    <string name="edit">Edit</string>
    <string name="duration">%s %nDuration: %s</string>
    <string name="pleaseFillAllFields">Please fill in all fields first 😊</string>
    <string name="burgerMenuDescription">Click here to access the burger menu</string>
    <string name="favoritesSwitchDescription">Click here to toggle favorites</string>
    <string name="recipeCreated">Recipe created successfully!</string>
    <string name="deleteIngredient">Delete Ingredient</string>
    <string name="permissionNecessary">Permission Required</string>
    <string name="pleaseAllowGalleryAccess">Please allow access to the gallery to use images</string>
    <string name="pleaseAllowGalleryAccessInSettings">Please allow access to the gallery in the settings to use images</string>
    <string name="pleaseAllowStorageAccess">Please allow access to storage to use images</string>
    <string name="pleaseAllowStorageAccessInSettings">Please allow access to storage in the settings to use images</string>
    <string name="ingredientAmountCannotBeDeleted">Ingredient is still in use and cannot be deleted</string>
    <string name="reload">↻</string>
    <string name="ingredientAdded">Ingredient added to shoppingbag</string>
    <string name="ingredientDeleted">Ingredient deleted from shoppingbag</string>
    <string name="otherIngredients">Other ingredients</string>
    <string name="wasRemoved">was removed.</string>
    <string name="allEntriesRemoved">All entries removed</string>
    <string name="XEntriesRemoved">entries removed</string>
    <string name="noEntriesRemoved">No entries removed</string>
    <string name="chooseIngredient">Choose ingredient</string>
    <string name="createIngredientButtonDescription" translatable="false">Button to create a new ingredient</string>
    <string name="setAmount">Set amount</string>
    <string name="createIngredient">Create ingredient</string>
    <string name="nameColon">Name:</string>
    <string name="unitColon">Unit:</string>
    <string name="create">Create</string>
    <string name="deleteRecipe">Delete recipe</string>
    <string name="deleteRecipeCheck">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="entryRemoved">entry removed</string>
    <string name="amount">amount</string>
    <string name="name">name</string>
    <string name="ingredientAddedToShoppingBag">Ingredient added to shopping bag</string>
    <string name="ingredientRemovedFromShoppingBag">Ingredient removed from shopping bag</string>

    <!--Spinner Portionsmenge-->
    <string-array name="portionsmenge">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!--Spinner Zutat-->
    <string-array name="zutat">
    </string-array>
    <string name="randomRecipe">Chefs choice:</string>
</resources>
