<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250sp"
        android:layout_height="400sp"
        android:layout_gravity="center"
        android:layout_marginBottom="300sp"
        android:contentDescription="@string/ImageViewDescription"
        android:src="@drawable/logo_und_text"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titleBelowLogo"
        android:text="@string/titleBelowLogo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_anchor="@id/imageView2"
        app:layout_anchorGravity="bottom|center" />


    <LinearLayout
        android:id="@+id/randomRecipeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchor="@id/textView1"
        app:layout_anchorGravity="bottom|center">

        <LinearLayout
            android:id="@+id/randomRecipeHeading"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/backgroundGreen"
            android:orientation="horizontal"
            app:layout_anchor="@id/textView1"
            app:layout_anchorGravity="bottom|center"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomRecipe"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/darkerYellow">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleViewRecipe"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15sp"
                app:civ_border_color="@color/darkerYellow"
                app:civ_border_width="4dp"
                android:layout_marginStart="20sp" />

            <TextView
                android:id="@+id/randomRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:textSize="18sp" />

        </LinearLayout>
        <Button
            android:id="@+id/reloadButton"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/reload"
            android:textSize="30sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        style="@style/BottomNavigationBarStyle"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
